--- a/package.json
+++ b/package.json
@@ -10,15 +10,30 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
-    "react": "^18.2.0",
+    "axios": "^0.24.0",
+    "chart.js": "^3.7.0",
+    "concurrently": "^8.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongodb": "^4.15.0",
+    "mongoose": "^7.0.3",
+    "os-utils": "^0.0.14",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
+    "recharts": "^2.5.0",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.13",
+    "@types/mongodb": "^4.0.7",
+    "@types/os-utils": "^0.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "concurrently \"ts-node ./dist/src/server.js\" \"react-scripts start\"",
+    "build": "concurrently \"tsc\" \"react-scripts build\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
